--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,12 @@
     ],
     "support": {
         "issues": "https://github.com/phpmonad/issues",
-        "docs": ""
+        "docs": "https://github.com/phpmonad"
     },
     "require": {
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": {
-            "PhpMonad\\": "PhpMonad"
-        }
+        "classmap": ["PhpMonad/"]
     }
 }
